@@ -27,3 +27,7 @@ ln -s /usr/share/java/glassfish-jaxb/jaxb-core.jar /usr/share/spacewalk/taskomat
 
 # Workaround as http is not working.
 sed -i 's#http://localhost#https://localhost#' /usr/bin/spacewalk-setup
+
+# Fix waiting for merge:
+sed -i 's/--add-modules java.annotation,com.sun.xml.bind//' /usr/share/spacewalk/setup/tomcat.java_opts 
+sed -i 's/--add-modules java.annotation,com.sun.xml.bind//' /etc/sysconfig/tomcat
